@@ -1,3 +1,6 @@
+Version 2012060202
++ New theme: all_in_the_family
+
 Version 2012060201 Sat Jun  2 01:49:14 CEST 2012
 + New theme: kodokan
 
